bin/tests/snapshots/structured_text_file__76981acd465863a0e370ae0460d41766_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeText "config.json" ''
  { "port": ${toString port} }
''
---
