bin/tests/snapshots/structured_text_file__76981acd465863a0e370ae0460d41766_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeText "config.json" ''
  { "port": ${toString port} }
''
---
<temp_file_path>>1:30:W:32:[structured_text_file] `config.json` is written as JSON text
