bin/tests/snapshots/structured_text_file__76981acd465863a0e370ae0460d41766_lint_stderr.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeText "config.json" ''
  { "port": ${toString port} }
''
---
[structured_text_file] Warning: Structured file written as text
   ╭─[ <temp_file_path>:1:30 ]
   │
 1 │ ╭─▶ pkgs.writeText "config.json" ''
   ┆ ┆   
 3 │ ├─▶ ''
   │ │        
   │ ╰──────── config.json is written as JSON text
───╯
