bin/tests/snapshots/structured_text_file__867f32928fc375a994caabb159a189d8_fix.snap
---
source: bin/tests/structured_text_file.rs
---
{ scripts.setup.exec = ''
  cat > config.json <<'EOF'
  { "port": ${toString port},
    "host": "localhost" }
  EOF
''; }
---
