bin/tests/snapshots/structured_text_file__867f32928fc375a994caabb159a189d8_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
{ scripts.setup.exec = ''
  cat > config.json <<'EOF'
  { "port": ${toString port},
    "host": "localhost" }
  EOF
''; }
---
<temp_file_path>>2:3:W:32:[structured_text_file] `config.json` is written as JSON text by the script
