bin/tests/snapshots/structured_text_file__911c182a6f2e6e89dd39729eaf503a83_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeTextFile { name = "x.ini"; text = ''
  [main]
  key = ${value}
''; }
---
