bin/tests/snapshots/structured_text_file__911c182a6f2e6e89dd39729eaf503a83_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeTextFile { name = "x.ini"; text = ''
  [main]
  key = ${value}
''; }
---
<temp_file_path>>1:45:W:32:[structured_text_file] `x.ini` is written as INI text
